--- a/GoElectrify.Api/appsettings.json
+++ b/GoElectrify.Api/appsettings.json
@@ -6,10 +6,10 @@
         }
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "SqlServer": "Server=IVORLEE;Database=GoElectrifyDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True",
-        "Redis": "Use-User-Secrets"
-    },
+  "ConnectionStrings": {
+    "SqlServer": "Server=0.tcp.ap.ngrok.io,15432;Database=GoElectrifyDB;User ID=ge_migrator;Password=gQURq7ihKYF4JUnFkf;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True",
+    "Redis": "Use-User-Secrets"
+  },
     "Jwt": {
         "Issuer": "go-electrify",
         "Audience": "go-electrify-client",
