--- a/GoElectrify.Api/appsettings.json
+++ b/GoElectrify.Api/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "SqlServer": "Server=IVORLEE;Database=GoElectrifyDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True",
+        "SqlServer": "Use-User-Secrets",
         "Redis": "Use-User-Secrets"
     },
     "Jwt": {
@@ -22,5 +22,12 @@
         "WriteTo": [
             { "Name": "Console" }
         ]
+    },
+    "Email": {
+        "Provider": "Resend", // Dev: Console | Prod: Resend
+        "From": "Go Electrify <no-reply@go-electrify.com>"
+    },
+    "Resend": {
+        "ApiToken": "Use-User-Secrets" // Nếu bạn muốn dùng appsettings thay vì env var
     }
 }
