Migrates database to PostgreSQL
Switches the application's database provider from SQL Server to PostgreSQL.

This change includes adding the necessary NuGet packages for PostgreSQL integration, updating the database context to use Npgsql, configuring the connection string in appsettings.json, and applying snake case naming conventions for database tables and columns. The previous SQL Server migration is removed and replaced with a new PostgreSQL-compatible migration.

--- a/GoElectrify.Api/appsettings.json
+++ b/GoElectrify.Api/appsettings.json
@@ -8,7 +8,8 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "SqlServer": "Use-User-Secrets",
-        "Redis": "Use-User-Secrets"
+        "Redis": "Use-User-Secrets",
+        "PostgreSql": "Use-User-Secrets",
     },
     "Jwt": {
         "Issuer": "go-electrify",
