Handles invalid OTP verification
Improves error handling during OTP verification by wrapping the `VerifyOtpAsync` call in a try-catch block.

This allows the API to return a more informative error message (400 Bad Request) to the client when an `InvalidOperationException` occurs, such as when the OTP is incorrect or expired.

Previously, such exceptions would result in a server error, obscuring the underlying cause from the client.

--- a/GoElectrify.Api/appsettings.json
+++ b/GoElectrify.Api/appsettings.json
@@ -9,7 +9,7 @@
     "ConnectionStrings": {
         "SqlServer": "Use-User-Secrets",
         "Redis": "Use-User-Secrets",
-        "PostgreSql": "Use-User-Secrets",
+        "PostgreSql": "Use-User-Secrets"
     },
     "Jwt": {
         "Issuer": "go-electrify",
@@ -25,10 +25,10 @@
         ]
     },
     "Email": {
-        "Provider": "Resend", // Dev: Console | Prod: Resend
+        "Provider": "Resend",
         "From": "Go Electrify <no-reply@go-electrify.com>"
     },
     "Resend": {
-        "ApiToken": "Use-User-Secrets" // Nếu bạn muốn dùng appsettings thay vì env var
+        "ApiToken": "Use-User-Secrets"
     }
 }
