Manage  Charging Session & Fix Auth

--- a/GoElectrify.Api/appsettings.json
+++ b/GoElectrify.Api/appsettings.json
@@ -30,5 +30,8 @@
     },
     "Resend": {
         "ApiToken": "Use-User-Secrets"
+    },
+    "Ably": {
+        "ApiKey": "Use-User-Secrets"
     }
 }
