--- a/GoElectrify.Api/appsettings.json
+++ b/GoElectrify.Api/appsettings.json
@@ -6,11 +6,13 @@
         }
     },
     "AllowedHosts": "*",
+
     "ConnectionStrings": {
         "SqlServer": "Use-User-Secrets",
         "Redis": "Use-User-Secrets",
         "PostgreSql": "Use-User-Secrets"
     },
+
     "Jwt": {
         "Issuer": "go-electrify",
         "Audience": "go-electrify-client",
@@ -18,57 +20,31 @@
         "AccessMinutes": 30,
         "RefreshDays": 30
     },
+
     "Serilog": {
         "MinimumLevel": "Information",
         "WriteTo": [
             { "Name": "Console" }
         ]
     },
+
     "Email": {
         "Provider": "Resend",
         "From": "Go Electrify <no-reply@go-electrify.com>"
     },
+
     "Resend": {
         "ApiToken": "Use-User-Secrets"
     },
-    "Ably": {
-        "ApiKey": "Use-User-Secrets"
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "SqlServer": "Use-User-Secrets",
-    "Redis": "Use-User-Secrets",
-    "PostgreSql": "Use-User-Secrets"
-  },
-  "Jwt": {
-    "Issuer": "go-electrify",
-    "Audience": "go-electrify-client",
-    "Secret": "Use-User-Secrets",
-    "AccessMinutes": 30,
-    "RefreshDays": 30
-  },
-  "Serilog": {
-    "MinimumLevel": "Information",
-    "WriteTo": [
-      { "Name": "Console" }
-    ]
-  },
-  "Email": {
-    "Provider": "Resend",
-    "From": "Go Electrify <no-reply@go-electrify.com>"
-  },
-  "Resend": {
-    "ApiToken": "Use-User-Secrets"
-  },
 
-  "PayOS": {
-    "ClientId": "Use-User-Secrets",
-    "ApiKey": "Use-User-Secrets",
-    "ChecksumKey": "Use-User-Secrets"
-  }
+    "Ably": {
+        "ApiKey": "Use-User-Secrets",
+        "WebhookToken": "Use-User-Secrets"
+    },
+
+    "PayOS": {
+        "ClientId": "Use-User-Secrets",
+        "ApiKey": "Use-User-Secrets",
+        "ChecksumKey": "Use-User-Secrets"
+    }
 }
