--- a/GoElectrify.BLL/GoElectrify.BLL.csproj
+++ b/GoElectrify.BLL/GoElectrify.BLL.csproj
@@ -7,15 +7,17 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Dto\**" />
+	  <EmbeddedResource Remove="Dto\**" />
+	  <None Remove="Dto\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="15.0.1" />
 		<PackageReference Include="FluentValidation" Version="12.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
 
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Dto\ConnectorTypes\" />
 	</ItemGroup>
 
 </Project>
