--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -64,37 +64,8 @@ jobs:
           DIGEST: ${{ steps.build-and-push.outputs.digest }}
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
 
-      - name: Trigger Render Deploy
-        if: github.ref == 'refs/heads/main'
-        env:
-          deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
-        run: |
-          curl "$deploy_url"
-
-      - name: Poll Render Deploy Status
-        if: github.ref == 'refs/heads/main'
-        env:
-          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
-        run: |
-          echo "Polling Render deploy status..."
-          DEPLOY_ID=$(curl -s -H "Authorization: Bearer $RENDER_API_KEY" "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys?limit=1" | jq -r '.deploys[0].id')
-          if [ -z "$DEPLOY_ID" ]; then
-            echo "Failed to get deploy ID"
-            exit 1
-          fi
-
-          for i in {1..30}; do
-            STATUS=$(curl -s -H "Authorization: Bearer $RENDER_API_KEY" "https://api.render.com/v1/deploys/$DEPLOY_ID" | jq -r '.status')
-            echo "Deploy status: $STATUS"
-            if [ "$STATUS" == "live" ]; then
-              echo "Deploy succeeded!"
-              exit 0
-            elif [ "$STATUS" == "failed" ]; then
-              echo "Deploy failed!"
-              exit 1
-            fi
-            sleep 10
-          done
-          echo "Timed out waiting for deploy to finish"
-          exit 1
+      - uses: JorgeLNJunior/render-deploy@v1.4.5
+        with:
+          service_id: ${{ secrets.RENDER_SERVICE_ID }}
+          api_key: ${{ secrets.RENDER_API_KEY }}
+          wait_deploy: true
