Fix Time Access Token

--- a/GoElectrify.Api/appsettings.json
+++ b/GoElectrify.Api/appsettings.json
@@ -17,7 +17,7 @@
         "Issuer": "go-electrify",
         "Audience": "go-electrify-client",
         "Secret": "Use-User-Secrets",
-        "AccessMinutes": 30,
+        "AccessSeconds": 30,
         "RefreshDays": 30
     },
 
