--- a/GoElectrify.Api/appsettings.json
+++ b/GoElectrify.Api/appsettings.json
@@ -46,5 +46,10 @@
         "ClientId": "Use-User-Secrets",
         "ApiKey": "Use-User-Secrets",
         "ChecksumKey": "Use-User-Secrets"
+    },
+    "DockAuth": {
+        "Issuer": "go-electrify",
+        "Audience": "go-electrify-dock",
+        "SigningKey": "fC9QzRYbhp4G6p3wyRoUnVl1xpTGVbFwi39H"
     }
 }
