--- a/GoElectrify.Api/appsettings.json
+++ b/GoElectrify.Api/appsettings.json
@@ -50,6 +50,25 @@
     "DockAuth": {
         "Issuer": "go-electrify",
         "Audience": "go-electrify-dock",
-        "SigningKey": "fC9QzRYbhp4G6p3wyRoUnVl1xpTGVbFwi39H"
+        "SigningKey": "Use-User-Secrets"
+    },
+    "Authentication": {
+        "Google": {
+            "ClientId": "Use-User-Secrets",
+            "ClientSecret": "Use-User-Secrets",
+            "CallbackPath": "/signin-google"
+        }
+    },
+    "Frontend": {
+        "BaseUrl": "https://go-electrify.com"
+    },
+    "Auth": {
+        "CookieDomain": ".go-electrify.com",
+        "AccessTokenMinutes": 30,
+        "RefreshTokenDays": 30
+    },
+
+    "Cors": {
+        "AllowedOrigins": [ "https://go-electrify.com" ]
     }
 }
