--- a/GoElectrify.Api/appsettings.json
+++ b/GoElectrify.Api/appsettings.json
@@ -69,6 +69,6 @@
     },
 
     "Cors": {
-        "AllowedOrigins": [ "https://go-electrify.com" ]
+        "AllowedOrigins": [ "https://go-electrify.com", "http://localhost:3000" ]
     }
 }
