--- a/GoElectrify.BLL/GoElectrify.BLL.csproj
+++ b/GoElectrify.BLL/GoElectrify.BLL.csproj
@@ -17,6 +17,8 @@
 		<PackageReference Include="FluentValidation" Version="12.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+		<PackageReference Include="Npgsql" Version="9.0.4" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
 
 	</ItemGroup>
 
