fix policy oauth

--- a/GoElectrify.Api/appsettings.json
+++ b/GoElectrify.Api/appsettings.json
@@ -65,7 +65,8 @@
     "Auth": {
         "CookieDomain": ".go-electrify.com",
         "AccessTokenMinutes": 30,
-        "RefreshTokenDays": 30
+        "RefreshTokenDays": 30,
+        "DefaultFrontendRedirect": "https://go-electrify.com"
     },
 
     "Cors": {
